src/hoppet/fortran_prototypes.h

#define DEFINE_RETURN_INT_MEMBER(classname, membername)           extern "C" int            hoppet_cxx__##classname##__##membername(const classname##_f * ptr);
#define DEFINE_RETURN_DBL_MEMBER(classname, membername)           extern "C" double         hoppet_cxx__##classname##__##membername(const classname##_f * ptr);
#define DEFINE_RETURN_OBJ_MEMBER(classname, membername, typename) extern "C" typename##_f * hoppet_cxx__##classname##__##membername(const classname##_f * ptr);
#define DEFINE_RETURN_OBJ_MEMBER_IJ(classname, membername, typename) extern "C" typename##_f * hoppet_cxx__##classname##__##membername(const classname##_f * ptr, int i, int j);
#define DEFINE_DELETE(classname) \
   extern "C" void hoppet_cxx__##classname##__delete(classname##_f ** ptr); \
   inline void generic_delete(classname##_f * ptr) {if (ptr) hoppet_cxx__##classname##__delete(&ptr);}
DEFINE_RETURN_DBL_MEMBER(grid_def,dy)
DEFINE_RETURN_DBL_MEMBER(grid_def,ymax)
DEFINE_RETURN_DBL_MEMBER(grid_def,eps)
DEFINE_RETURN_INT_MEMBER(grid_def,nsub)
DEFINE_RETURN_INT_MEMBER(grid_def,order)
DEFINE_RETURN_LOG_MEMBER(grid_def,locked)
DEFINE_RETURN_OBJ_MEMBER_I(grid_def,subgd,grid_def)
DEFINE_RETURN_INT_MEMBER_I(grid_def,subiy)
inline void generic_delete(grid_def_f * ptr) {if (ptr) hoppet_cxx__grid_def__delete(&ptr);}
DEFINE_DELETE(grid_conv)
//inline void generic_delete(grid_conv_f * ptr) {if (ptr)hoppet_cxx__grid_conv__delete(&ptr);}
inline grid_conv_f * generic_copy(const grid_conv_f * ptr) {return hoppet_cxx__grid_conv__new_from_gc(ptr);}
//  if (ptr)  return hoppet_cxx__grid_conv__new_from_gc(ptr); else return nullptr;}
DEFINE_RETURN_OBJ_MEMBER(grid_conv,grid,grid_def)
DEFINE_RETURN_OBJ_MEMBER_I(grid_conv,subgc,grid_conv)


/// split_mat function wrappers
extern "C" {
DEFINE_COPY(mass_threshold_mat)
DEFINE_DELETE(mass_threshold_mat)

#define MTM_REF(NAME)  DEFINE_RETURN_OBJ_MEMBER(mass_threshold_mat,NAME,split_mat)
  running_coupling_f * hoppet_cxx__running_coupling__new_fixnf(double alphaS, double Q, int nloop, int fixnf, const double * Qmax = nullptr);
  running_coupling_f * hoppet_cxx__running_coupling__new_varnf(double alphaS, double Q, int nloop,
                                                              double mc, double mb, double mt,
                                                              bool masses_are_MSbar, double muMatch_mQuark, const double * Qmax = nullptr);
  void hoppet_cxx__running_coupling__delete(running_coupling_f ** rc);
  double hoppet_cxx__running_coupling__value(const running_coupling_f * rc, double Q, int * fixnf = 0);
  int    hoppet_cxx__running_coupling__num_loops(const running_coupling_f * rc);
  void   hoppet_cxx__running_coupling__nf_range(const running_coupling_f * rc, int * nflo, int * nfhi);
  int    hoppet_cxx__running_coupling__nf_at_q(const running_coupling_f * rc, double Q, double * Qlo=0, double * Qhi=0, const double * muM_mQ=0);
  double hoppet_cxx__running_coupling__quark_mass(const running_coupling_f * rc, int iflv);
  bool   hoppet_cxx__running_coupling__quark_masses_are_msbar(const running_coupling_f * rc);
  void   hoppet_cxx__running_coupling__q_range_at_nf(const running_coupling_f * rc, int nflcl, double * Qlo, double * Qhi);
  dglap_holder_f * hoppet_cxx__dglap_holder__new(const grid_def_f * gridptr, const int * factscheme, const int * nloop, const int * nflo, const int * nfhi);
  void hoppet_cxx__dglap_holder__set_nf(dglap_holder_f * ptr, int nf);
DEFINE_DELETE(dglap_holder)
DEFINE_RETURN_INT_MEMBER(dglap_holder,nloop)
DEFINE_RETURN_INT_MEMBER(dglap_holder,nf)
DEFINE_RETURN_INT_MEMBER(dglap_holder,factscheme)
DEFINE_RETURN_OBJ_MEMBER_IJ(dglap_holder,allp,split_mat)
DEFINE_RETURN_OBJ_MEMBER_IJ(dglap_holder,allmtm,mass_threshold_mat)

DEFINE_RETURN_OBJ_MEMBER(dglap_holder,grid,grid_def)
DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_lo,split_mat)
DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_nlo,split_mat)
DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_nnlo,split_mat)
DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_n3lo,split_mat)

//----- things for pdfseginfo ----------
DEFINE_RETURN_INT_MEMBER(pdfseginfo,ilnlnQ_lo)
DEFINE_RETURN_INT_MEMBER(pdfseginfo,ilnlnQ_hi)
DEFINE_RETURN_DBL_MEMBER(pdfseginfo,lnlnQ_lo)
DEFINE_RETURN_DBL_MEMBER(pdfseginfo,lnlnQ_hi)
DEFINE_RETURN_DBL_MEMBER(pdfseginfo,dlnlnQ)
DEFINE_RETURN_DBL_MEMBER(pdfseginfo,inv_dlnlnQ)

//----- things for pdf_table ----------
extern "C" {
  pdf_table_f * hoppet_cxx__pdf_table__new(const grid_def_f * grid, double Qmin, double Qmax, 
                    double dlnlnQ, int lnlnQ_order, bool freeze_at_Qmin, int iflv_max_table);
 
  void hoppet_cxx__pdf_table__copy_contents(pdf_table_f * dest, const pdf_table_f * src); //< src copied into dest                  
  void hoppet_cxx__pdf_table__add_nf_info(pdf_table_f * tab, const running_coupling_f * coupling);
  double * hoppet_cxx__pdf_table__tab_ptr(const pdf_table_f * tab);
  int      hoppet_cxx__pdf_table__size_flv(const pdf_table_f * tab);
DEFINE_COPY(pdf_table)
DEFINE_DELETE(pdf_table)

DEFINE_RETURN_OBJ_MEMBER(pdf_table,grid,grid_def)
DEFINE_RETURN_INT_MEMBER(pdf_table,nQ)
DEFINE_RETURN_INT_MEMBER(pdf_table,tab_iflv_max)
DEFINE_RETURN_INT_MEMBER(pdf_table,lnlnQ_order)
DEFINE_RETURN_LOG_MEMBER(pdf_table,freeze_at_Qmin)
DEFINE_RETURN_LOG_MEMBER(pdf_table,nf_info_associated)
DEFINE_RETURN_INT_MEMBER(pdf_table,nflo)
DEFINE_RETURN_INT_MEMBER(pdf_table,nfhi)
DEFINE_RETURN_DBL_MEMBER(pdf_table,lnlnQ_min)
DEFINE_RETURN_DBL_MEMBER(pdf_table,lnlnQ_max)
DEFINE_RETURN_DBL_MEMBER(pdf_table,lambda_eff)
DEFINE_RETURN_DBL_MEMBER(pdf_table,dlnlnQ)
DEFINE_RETURN_OBJ_MEMBER(pdf_table,seginfo_no_nf,pdfseginfo)

DEFINE_RETURN_OBJ_MEMBER_I(pdf_table,seginfo,pdfseginfo)
DEFINE_RETURN_DBL_MEMBER_I(pdf_table,as2pi)
DEFINE_RETURN_INT_MEMBER_I(pdf_table,nf_int)
DEFINE_RETURN_DBL_MEMBER_I(pdf_table,lnlnQ_vals)
DEFINE_RETURN_DBL_MEMBER_I(pdf_table,Q_vals)

//----- things for pdf_table arrays ----------
extern "C" {
DEFINE_DELETE(pdf_table_array)

//----- generic functions 
extern "C" {