src/hoppet_cxx_oo.F90


  function hoppet_cxx__running_coupling__new_fixnf(alphas_at_Q, Q, nloop, fixnf, Qmax) bind(C) result(res)
    real(c_double), intent(in), value :: alphas_at_Q, Q
    integer(c_int), intent(in), value :: nloop, fixnf
    real(c_double), intent(in), optional :: Qmax
    type(c_ptr) :: res
    !--
    type(running_coupling), pointer :: rc_f
    allocate(rc_f)
    call InitRunningCoupling(rc_f, alphas_at_Q, Q, nloop, fixnf=fixnf, Qmax=Qmax)
    res = c_loc(rc_f)
  end function hoppet_cxx__running_coupling__new_fixnf

  function hoppet_cxx__running_coupling__new_varnf(alphas_at_Q, Q, nloop, mc, mb, mt, masses_are_MSbar, muMatch_mQuark, Qmax) bind(C) result(res)
    real(c_double), intent(in), value :: alphas_at_Q, Q
    integer(c_int), intent(in), value :: nloop
    real(c_double), intent(in), value :: mc, mb, mt
    logical(c_bool), intent(in), value :: masses_are_MSbar
    real(c_double), intent(in), value :: muMatch_mQuark
    real(c_double), intent(in), optional :: Qmax
    type(c_ptr) :: res
    !--
    type(running_coupling), pointer :: rc_f
    logical :: masses_are_MSbar_f
    masses_are_MSbar_f = (masses_are_MSbar .neqv. .false._c_bool) ! safely convert to fortran logical
    allocate(rc_f)
    call InitRunningCoupling(rc_f, alphas_at_Q, Q, nloop, quark_masses = [mc, mb, mt], &
                             masses_are_MSbar = masses_are_MSbar_f, muMatch_mQuark = muMatch_mQuark, Qmax=Qmax)
    res = c_loc(rc_f)
  end function hoppet_cxx__running_coupling__new_varnf

  subroutine hoppet_cxx__running_coupling__delete(rc) bind(C)
    implicit none
    type(c_ptr), intent(inout) :: rc
    !--
    type(running_coupling), pointer :: f_ptr
    call c_f_pointer(rc, f_ptr)
    call Delete(f_ptr)
    deallocate(f_ptr)
    rc = c_null_ptr
  end subroutine hoppet_cxx__running_coupling__delete


  function hoppet_cxx__running_coupling__value(rc, Q, fixnf) bind(C) result(res)
    implicit none
    type(c_ptr),    intent(in), value    :: rc
    real(c_double), intent(in), value    :: Q
    integer(c_int), intent(in), optional :: fixnf
    real(c_double) :: res
    !--
    type(running_coupling), pointer :: rc_f

    call c_f_pointer(rc, rc_f)
    res = Value(rc_f, Q, fixnf=fixnf)
  end function hoppet_cxx__running_coupling__value

  !-- number of loops in the coupling
  function hoppet_cxx__running_coupling__num_loops(rc) bind(C) result(nloops)
    implicit none
    type(c_ptr), intent(in), value :: rc
    integer(c_int) :: nloops
    type(running_coupling), pointer :: rc_f

    call c_f_pointer(rc, rc_f)
    nloops = NumberOfLoops(rc_f)
  end function hoppet_cxx__running_coupling__num_loops

  !-- nf range: returns nflo,nfhi via out arguments
  subroutine hoppet_cxx__running_coupling__nf_range(rc, nflo, nfhi) bind(C)
    implicit none
    type(c_ptr), intent(in), value :: rc
    integer(c_int), intent(out) :: nflo, nfhi
    type(running_coupling), pointer :: rc_f

    call c_f_pointer(rc, rc_f)
    call NfRange(rc_f, nflo, nfhi)
  end subroutine hoppet_cxx__running_coupling__nf_range

  !-- nf at Q: returns nf and optional Qlo,Qhi via out args
  function hoppet_cxx__running_coupling__nf_at_q(rc, Q, Qlo, Qhi, muM_mQ) bind(C) result(nf)
    implicit none
    type(c_ptr), intent(in), value :: rc
    real(c_double), intent(in), value :: Q
    real(c_double), intent(out), optional :: Qlo, Qhi
    real(c_double), intent(in),  optional :: muM_mQ
    integer(c_int) :: nf
    type(running_coupling), pointer :: rc_f

    call c_f_pointer(rc, rc_f)
    nf = NfAtQ(rc_f, Q, Qlo, Qhi, muM_mQ=muM_mQ)
  end function hoppet_cxx__running_coupling__nf_at_q

  !-- quark mass for a flavour
  function hoppet_cxx__running_coupling__quark_mass(rc, iflv) bind(C) result(mass)
    implicit none
    type(c_ptr), intent(in), value :: rc
    integer(c_int), intent(in), value :: iflv
    real(c_double) :: mass
    type(running_coupling), pointer :: rc_f

    call c_f_pointer(rc, rc_f)
    mass = QuarkMass(rc_f, iflv)
  end function hoppet_cxx__running_coupling__quark_mass

  !-- quark masses are MSbar?
  function hoppet_cxx__running_coupling__quark_masses_are_msbar(rc) bind(C) result(res)
    implicit none
    type(c_ptr), intent(in), value :: rc
    logical(c_bool) :: res
    type(running_coupling), pointer :: rc_f

    call c_f_pointer(rc, rc_f)
    res = QuarkMassesAreMSbar(rc_f)
  end function hoppet_cxx__running_coupling__quark_masses_are_msbar

  !-- Q range at nf
  subroutine hoppet_cxx__running_coupling__q_range_at_nf(rc, nflcl, Qlo, Qhi) bind(C)
    implicit none
    type(c_ptr), intent(in), value :: rc
    integer(c_int), intent(in), value :: nflcl
    real(c_double), intent(out) :: Qlo, Qhi
    type(running_coupling), pointer :: rc_f

    call c_f_pointer(rc, rc_f)
    call QRangeAtNf(rc_f, nflcl, Qlo, Qhi)
  end subroutine hoppet_cxx__running_coupling__q_range_at_nf

end module hoppet_cxx_oo_running_coupling

!=====================================================================
! wrappers for C++ OO interface to dglap_holder
module hoppet_cxx_oo_dglap_holder
  use, intrinsic :: iso_c_binding
  use dglap_holders
  use convolution
  implicit none
contains

  function hoppet_cxx__dglap_holder__new(grid, factscheme, nloop, nflo, nfhi) bind(C) result(dh_ptr)
    implicit none
    type(c_ptr) :: dh_ptr
    type(c_ptr), intent(in), value :: grid
    integer(c_int), intent(in), optional :: factscheme
    integer(c_int), intent(in), optional :: nloop
    integer(c_int), intent(in), optional :: nflo
    integer(c_int), intent(in), optional :: nfhi
    !-- local Fortran pointers
    type(grid_def), pointer :: grid_f
    type(dglap_holder), pointer :: dh_f

    call c_f_pointer(grid, grid_f)
    allocate(dh_f)

    call InitDglapHolder(grid_f, dh_f, factscheme, nloop, nflo, nfhi)

    dh_ptr = c_loc(dh_f)
  end function hoppet_cxx__dglap_holder__new

  subroutine hoppet_cxx__dglap_holder__set_nf(dh, nf_lcl) bind(C)
    implicit none
    type(c_ptr), intent(in), value :: dh
    integer(c_int), intent(in), value :: nf_lcl
    !--
    type(dglap_holder), pointer :: dh_f

    call c_f_pointer(dh, dh_f)
    call SetNfDglapHolder(dh_f, nf_lcl)
  end subroutine hoppet_cxx__dglap_holder__set_nf


  DEFINE_DELETE(dglap_holder)
  DEFINE_RETURN_INT_MEMBER(dglap_holder,nloop)
  DEFINE_RETURN_INT_MEMBER(dglap_holder,nf)
  DEFINE_RETURN_INT_MEMBER(dglap_holder,factscheme)
  DEFINE_RETURN_OBJ_MEMBER_IJ(dglap_holder,allp,split_mat)

  DEFINE_RETURN_OBJ_MEMBER(dglap_holder,grid,grid_def)
  DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_lo,split_mat)
  DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_nlo,split_mat)
  DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_nnlo,split_mat)
  DEFINE_RETURN_OBJ_MEMBER(dglap_holder,p_n3lo,split_mat)

  DEFINE_RETURN_OBJ_MEMBER_IJ(dglap_holder,allmtm,mass_threshold_mat)
  DEFINE_RETURN_OBJ_MEMBER(dglap_holder,mtm_nnlo,mass_threshold_mat)
  DEFINE_RETURN_OBJ_MEMBER(dglap_holder,mtm_n3lo,mass_threshold_mat)

end module hoppet_cxx_oo_dglap_holder


!=====================================================================
!! wrappers for C++ OO interface to pdf_table, as well as pdfseginfo
module hoppet_cxx_oo_pdf_table
  use, intrinsic :: iso_c_binding
  use pdf_tabulate
  use convolution
  use dglap_objects
  use types, only: dp
  implicit none

contains

  ! things related to the pdfseginfo type, will be 
  ! accessible only as a "view" so not need for allocation
  ! or deletion functions
  DEFINE_RETURN_INT_MEMBER(pdfseginfo,ilnlnQ_lo)
  DEFINE_RETURN_INT_MEMBER(pdfseginfo,ilnlnQ_hi)
  DEFINE_RETURN_DBL_MEMBER(pdfseginfo,lnlnQ_lo)
  DEFINE_RETURN_DBL_MEMBER(pdfseginfo,lnlnQ_hi)
  DEFINE_RETURN_DBL_MEMBER(pdfseginfo,dlnlnQ)
  DEFINE_RETURN_DBL_MEMBER(pdfseginfo,inv_dlnlnQ)

  !! allocate a new pdf_table object and return a pointer to it
  function hoppet_cxx__pdf_table__new(grid, Qmin, Qmax, dlnlnQ, lnlnQ_order, freeze_at_Qmin, iflv_max_table)  bind(C) result(tab_ptr)
    use pdf_representation
    implicit none
    type(c_ptr) :: tab_ptr
    type(c_ptr), intent(in), value :: grid
    real(c_double),  intent(in), value :: Qmin, Qmax 
    real(c_double),  intent(in), value :: dlnlnQ
    integer(c_int),  intent(in), value :: lnlnQ_order
    logical(c_bool), intent(in), value :: freeze_at_Qmin
    integer(c_int),  intent(in), value :: iflv_max_table
    !-- local Fortran pointers
    type(grid_def), pointer :: grid_f
    type(pdf_table), pointer :: tab_f
    type(logical) :: freeze_at_Qmin_f

    call c_f_pointer(grid, grid_f)
    allocate(tab_f)
    freeze_at_Qmin_f = (freeze_at_Qmin .neqv. .false._c_bool) ! safely convert to fortran logical
    call AllocPDFTable(grid_f, tab_f, Qmin, Qmax, dlnlnQ, lnlnQ_order, &
                      freeze_at_Qmin=freeze_at_Qmin_f, &
                      iflv_max_table=iflv_max_table + iflv_min)

    tab_ptr = c_loc(tab_f)
  end function hoppet_cxx__pdf_table__new

  function hoppet_cxx__pdf_table__copy(other) bind(C) result(tab_ptr)
    implicit none
    type(c_ptr), intent(in), value :: other
    type(c_ptr) :: tab_ptr
    !-- local Fortran pointers
    type(pdf_table), pointer :: other_f, tab_f

    call c_f_pointer(other, other_f)
    allocate(tab_f)
    call AllocPDFTable(tab_f, other_f)
    tab_f%tab = other_f%tab
    tab_ptr = c_loc(tab_f)
  end function hoppet_cxx__pdf_table__copy

  !! Note that as of 2025-11-12 this does not copy any evolution
  !! operators
  subroutine hoppet_cxx__pdf_table__copy_contents(dest, src) bind(C)
    implicit none
    type(c_ptr), intent(in), value :: dest, src
    !-- local Fortran pointers
    type(pdf_table), pointer :: src_f, dest_f

    call c_f_pointer(src, src_f)
    call c_f_pointer(dest, dest_f)
    call AllocPDFTable(dest_f, src_f)
    dest_f%tab = src_f%tab
  end subroutine hoppet_cxx__pdf_table__copy_contents

  subroutine hoppet_cxx__pdf_table__add_nf_info(tab, coupling) bind(C)
    use qcd_coupling
    implicit none
    type(c_ptr), intent(in), value :: tab
    type(c_ptr), intent(in), value :: coupling
    !--
    type(pdf_table), pointer :: tab_f
    type(running_coupling), pointer :: coupling_f

    call c_f_pointer(tab, tab_f)
    call c_f_pointer(coupling, coupling_f)

    call AddNfInfoToPDFTable(tab_f, coupling_f)
  end subroutine hoppet_cxx__pdf_table__add_nf_info

  !! return a c pointer to the first element of the tab array
  function hoppet_cxx__pdf_table__tab_ptr(obj) result(res) bind(C)
    implicit none
    type(c_ptr), intent(in), value :: obj
    type(c_ptr) :: res
    type(pdf_table), pointer :: obj_f

    call c_f_pointer(obj, obj_f)
    res = c_loc(obj_f%tab(lbound(obj_f%tab,1),lbound(obj_f%tab,2),lbound(obj_f%tab,3)))
  end function

  !! return the size of the flavour dimension of the tab array (including the "info" index)
  function hoppet_cxx__pdf_table__size_flv(obj) result(res) bind(C)
    implicit none
    type(c_ptr), intent(in), value :: obj
    integer(c_int) :: res
    type(pdf_table), pointer :: obj_f

    call c_f_pointer(obj, obj_f)
    res = size(obj_f%tab,2)
  end function

  subroutine hoppet_cxx__pdf_table__at_Q_into(tab, Q, pdf) bind(C)
    implicit none
    type(c_ptr),    intent(in), value :: tab
    real(c_double), intent(in), value :: Q
    type(c_ptr),    intent(in), value :: pdf
    !--------
    type(pdf_table), pointer :: tab_f
    real(c_double),  pointer :: pdf_f(:,:)

    call c_f_pointer(tab, tab_f)
    !                                           y             flv
    call c_f_pointer(pdf, pdf_f, shape=[size(tab_f%tab,1), size(tab_f%tab,2)])
    call EvalPdfTable_Q(tab_f, Q, pdf_f)
  end subroutine


  !! return the interpolation of the pdf table at (y,Q,iflv)
  !! watch out iflv_cxx starts from zero, while iflv in fortran pdf_table starts from ncompmin
  function hoppet_cxx__pdf_table__at_yQf(obj, y, Q, iflv_cxx) result(res) bind(C)
    use pdf_representation
    implicit none
    type(c_ptr), intent(in), value :: obj
    real(c_double), intent(in), value :: y, Q
    integer(c_int), intent(in), value :: iflv_cxx
    real(c_double) :: res
    type(pdf_table), pointer :: obj_f
